# EmergencyMonitoringSystem

./: README.md
data-forward-server/: .gitignore  Cargo.toml  README.md
data-forward-server/src/: api.rs  camera.rs  main.rs  messages.rs  web_socket_actor.rs
data-forward-server/src/camera/: adapter.rs  api.rs  camera.rs  manager.rs
latex/: .gitignore  thesis.tex  tongjithesis.cls
latex/data/: chap00.tex  chap01.tex  chap02.tex  chap03.tex  chap04.tex  chap05.tex
multi_cam_website/: camera_server.py
multi_cam_website/templates/: camera_view.html  index.html  inference.html  inference_result.html
pics/: architecture.puml
yolov8_seg/: test.py
yolov8_seg/cpp/: CMakeLists.txt  main2.cc  postprocess.cc
