[package]
name = "data-forward-server"
version = "0.1.0"
edition = "2024"
incremental = false
[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
actix-ws = "0.3.0"
futures-util ="0.3.31"
derive_more = "0.99"
opencv = "0.94.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
